# TRADING-AGENT-LA-FALANGE-

./: .env.example  .gitignore  MT_BRIDGE_API_CONTRACT.md  README.md  ROADMAP.md  plan.md
.github/workflows/: ci.yml  deploy.yml
apps/backend/: .env.example  Dockerfile  check_metatrader_symbols.py  check_oanda_instruments.py  create_admin.py  nixpacks.toml  pyproject.toml  requirements.txt
apps/backend/scripts/: create_admin.py  create_admin.sql  create_admin_auto.py
apps/backend/src/: __init__.py  main.py
apps/backend/src/api/v1/routes/: __init__.py  admin.py  ai.py  analytics.py  auth.py  bot.py  brokers.py  chart_analysis.py  market.py  positions.py  settings.py  trading.py  websocket.py  whop.py
apps/backend/src/core/: __init__.py  config.py  database.py  email.py  models.py  security.py
apps/backend/src/engines/ai/: __init__.py  autonomous_analyst.py  base_ai.py  chart_vision.py  consensus_engine.py  multi_timeframe_analyzer.py  tradingview_agent.py  vision_analyzer.py
apps/backend/src/engines/ai/prompts/: __init__.py  templates.py
apps/backend/src/engines/ai/providers/: __init__.py  aiml_provider.py  anthropic_provider.py  google_provider.py  groq_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
apps/backend/src/engines/data/: __init__.py  alpha_vantage.py  indicators.py  market_data.py
apps/backend/src/engines/trading/: __init__.py  alpaca_broker.py  auto_trader.py  base_broker.py  broker_factory.py  ig_broker.py  metatrader_bridge_broker.py  metatrader_broker.py  multi_broker_manager.py  oanda_broker.py  platform_rest_broker.py  risk_manager.py
apps/backend/src/services/: __init__.py  ai_service.py  broker_credentials_service.py  chart_generator_service.py  economic_calendar_service.py  market_data_service.py  price_streaming_service.py  technical_analysis_service.py  trading_service.py
apps/backend/tests/: conftest.py
apps/backend/tests/unit/: test_metatrader_broker_symbol_encoding.py  test_risk_manager.py  test_symbol_autodiscovery.py
apps/frontend/: .env.example  .env.production  Dockerfile  next.config.js  nixpacks.toml  package-lock.json  package.json  tailwind.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  legionModels.ts  page.tsx
apps/frontend/src/app/(dashboard)/: layout.tsx  page.tsx
apps/frontend/src/app/admin/: layout.tsx  page.tsx
apps/frontend/src/app/dashboard/: layout.tsx  page.tsx
apps/frontend/src/app/forgot-password/: page.tsx
apps/frontend/src/components/: index.ts
apps/frontend/src/contexts/: AuthContext.tsx  MusicContext.tsx
apps/frontend/src/hooks/: useChartCapture.ts  useWebSocket.ts
apps/frontend/src/lib/: api.ts  brokerCatalog.ts  http.ts  symbols.ts
apps/mt-bridge/: .env.example  README.md  requirements.txt  start-bridge.cmd  start-tunnel.cmd
apps/mt-bridge/src/: __init__.py  config.py  main.py  schemas.py  security.py  session_manager.py  terminal_manager.py
apps/mt-bridge/src/providers/: __init__.py  base.py  mock_provider.py  mt4_provider.py  mt5_provider.py
docker/: docker-compose.yml
(+20 files in other folders)
