[project]
name = "prometheus-backend"
version = "2.0.0"
description = "Prometheus Trading Platform - Backend API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | venv
    | alembic
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "E722",  # bare except (legacy code)
    "E731",  # lambda assignment
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from err (legacy code)
    "B006",  # mutable argument defaults (legacy code)
    "B007",  # unused loop variable
    "B027",  # empty method in ABC
    "B905",  # zip without strict
    "C401",  # unnecessary generator
    "C408",  # unnecessary dict call
    "F401",  # unused import (many are intentional for availability checks)
    "F841",  # unused variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic", "venv"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
